fix result screen visibility issues, improve board ui

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 * {
   box-sizing: border-box;
 }
+
 :root {
   --board-height: 450px;
+  --line-color: #563232;
+  --main-bg-color: #f7bb88;
 }
 
 body {
@@ -34,9 +37,11 @@ h1 {
 }
 
 .cell {
-  border: 1px solid black;
-  flex: auto;
-  height: calc(var(--board-height) / 3);
+  outline: 2px solid var(--line-color);
+  border: none;
+  background-color: var(--main-bg-color);
+  flex: 1 1 30%;
+  /* height: calc(var(--board-height) / 3); */
   display: flex;
   font-size: 4em;
   justify-content: center;
@@ -44,8 +49,18 @@ h1 {
   aspect-ratio: 1;
 }
 
+.cell:hover {
+  filter: brightness(90%);
+}
+
+.cell:active {
+  border: 8px inset var(--main-bg-color);
+}
+
 #result-container {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, serif;
   display: flex;
+  background-color: var(--main-bg-color);
   justify-content: center;
   align-items: center;
   font-size: 4em;
@@ -53,7 +68,6 @@ h1 {
   pointer-events: none;
   top: 0;
   left: 0;
-  background: #ebebeb;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -63,4 +77,16 @@ h1 {
 
 #main-container {
   position: relative;
+}
+
+#border-container {
+  width: 99%;
+  height: 99%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  outline: 20px solid var(--main-bg-color);
+  z-index: 8;
+  pointer-events: none;
+  border-radius: 12px;
 }
